--- a/back/requirements.txt
+++ b/back/requirements.txt
@@ -1,28 +1,28 @@
 # FastAPI Core
-fastapi==0.109.0
-uvicorn[standard]==0.27.0
-pydantic==2.5.3
-pydantic-settings==2.1.0
+fastapi>=0.115.0
+uvicorn[standard]>=0.32.0
+pydantic>=2.10.0
+pydantic-settings>=2.6.0
 
 # Database
-sqlalchemy==2.0.25
-psycopg2-binary==2.9.9
-alembic==1.13.1
+sqlalchemy>=2.0.36
+psycopg2-binary>=2.9.10
+alembic>=1.14.0
 
 # Data Processing
-numpy==1.26.3
-pandas==2.2.0
-scikit-learn==1.4.0
-joblib==1.3.2
+numpy>=1.26.4
+pandas>=2.2.3
+scikit-learn>=1.6.0
+joblib>=1.4.2
 
 # File Processing
-python-multipart==0.0.6
-aiofiles==23.2.1
+python-multipart>=0.0.18
+aiofiles>=24.1.0
 
 # Testing
-pytest==7.4.4
-pytest-asyncio==0.23.3
-httpx==0.26.0
+pytest>=8.3.0
+pytest-asyncio>=0.24.0
+httpx>=0.28.0
 
 # Development
-python-dotenv==1.0.0
+python-dotenv>=1.0.1
