--- a/front/package.json
+++ b/front/package.json
@@ -12,7 +12,7 @@
     "@react-three/drei": "10.7.6",
     "@react-three/fiber": "9.3.0",
     "@react-three/postprocessing": "^2.16.2",
-    "next": "15.5.4",
+    "next": "^16.1.2",
     "postprocessing": "^6.35.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -27,7 +27,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.5.4",
+    "eslint-config-next": "^16.1.2",
     "tailwindcss": "^4",
     "typescript": "5.9.3"
   },
